syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_generic_services = true;
option java_multiple_files = true;

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse {
    int32 result = 1;
}

message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number = 1;
}


service CalculatorService {

//    Unary
    rpc calc(SumRequest) returns (SumResponse) {};

//    Error handling
//    THis RPC will throw an exception if sent number is negative
    rpc squareRoot(SquareRootRequest) returns (SquareRootResponse) {};

}